Mainly added some data annotations for dates, small changes

--- a/DocSearch2.1/Views/Shared/_Layout.cshtml
+++ b/DocSearch2.1/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
                user-scalable=no" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/modernizr") <!--modernizr must be in head of script-->
 </head>
 <body>
     <div> 
