--- a/DocSearch2.1/Views/Shared/_Layout.cshtml
+++ b/DocSearch2.1/Views/Shared/_Layout.cshtml
@@ -15,7 +15,8 @@
     <div> 
         @RenderBody()
     </div>
-    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/otf")
+    <!--Eventually run bootstrap-->
     @RenderSection("CustomScripts", false)
 </body>
 </html>
