added synchonous pagination

--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<DocSearch2._1.ViewModels.PublicVM>
+﻿@model IPagedList<PublicVM>
+@*@model IEnumerable<DocSearch2._1.ViewModels.PublicVM>*@
 
 @{
     ViewBag.Title = "Westland Archive System";
