Added async pagination.  Note: if JS is turned off, this may cause issues to returning the categories as full page reloads of filtered searches will return less data for the categories to populate.

--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -38,7 +38,7 @@
         <h2>@TempData["Person_Name"]</h2>
 
         <form method="get" action="@Url.Action("Index")"
-              data-otf-ajax="true" data-otf-target="#public_table">
+              data-otf-ajax="true" data-otf-target="#publicTable">
             <input type="hidden" name="publicId" value="@Model.First().Folder_ID" />
             <input type="search" name="searchTerm" />
             <input type="submit" value="Search Description" />
