--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -2,6 +2,12 @@
 @*@model IEnumerable<DocSearch2._1.ViewModels.PublicVM>*@
 
 <div id="publicTable">
+
+    <div class="pagedList" data-otf-target="#publicTable">
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, publicId = Model.First().Folder_ID }),
+            PagedListRenderOptions.MinimalWithItemCountText)
+    </div>
+
     <table id="public_table" class="table">
         <tr>
             <th>
@@ -53,10 +59,5 @@
             </tr>
         }
     </table>
-
-    <div class="pagedList" data-otf-target="#public_table">
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, publicId = Model.First().Folder_ID }),
-            PagedListRenderOptions.MinimalWithItemCountText)
-    </div>
 </div>
 
