--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -53,7 +53,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
-                <td><a href="#">File</a></td>
+                <td>@Html.ActionLink("File", "FileDisplay", new { documentId = item.Document_ID }, new { target = "_blank"}) </td>
                 <td>OPEN ME</td>
             </tr>
         }
